--- a/views/_layout.html.erb
+++ b/views/_layout.html.erb
@@ -9,12 +9,25 @@
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-        <header>
-        </header>
-        <article>
-            <%= yield %>
-        </article>
-        <footer>
+        <div id="wrapper">
+            <header class="container">
+                <div class="row">
+                    <div class="span12">
+
+                    </div>
+                </div>
+            </header>
+            <article class="container">
+                <%= yield %>
+            </article>
+            <div class="push"></div>
+        </div>
+        <footer class="container">
+            <div class="row">
+                <div class="span12">
+                    
+                </div>
+            </div>
         </footer>
     </body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
