--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -5,6 +5,7 @@
 // @import bootswatch/cerulean/bootswatch
 @import compass
 @import recipes
+@import font-awesome
 //////////
 ///// sticky footer
 $footer-height: 40px
