--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,16 +1,10 @@
 // libs
 @import compass/reset.scss
-// @import bootswatch/cerulean/variables
-// @import bootstrap
-// @import bootswatch/cerulean/bootswatch
 @import compass
-// @import recipes
-// @import font-awesome
-@import foundation
+@import foundation.min.scss
 @import bootstrap/variables
 @import bootstrap/mixins
 @import bootstrap/thumbnails
-// @import "foundation"
 //////////
 ///// sticky footer
 $footer-height: 90px
@@ -109,9 +103,9 @@ footer
     width: 116px
 .small-6
     width: 248px
-// @import bootstrap-responsive.scss
+// Стили страницы
+// ==========================================================================
 #form
-    // height: 350px
     .orbit-slide
         background: #ddd
         padding: 20px 60px
