--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -1,4 +1,4 @@
-<% @id = "page-home" %>
+<% @id = "page-form" %>
 <% @title = "Анкета для школы разработки интерфейсов" %>
 
 <h4 class="ib">ФИО</h4>
@@ -13,7 +13,7 @@
       </dl>
       <dl>
         <dt class="strong">Год рождения</dt>
-        <dd>07.01.1989</dd>
+        <dd>1989</dd>
       </dl>
       <dl>
         <dt class="strong">Город, в котором живу</dt>
@@ -21,7 +21,7 @@
       </dl>
     </div>
     <div class="six columns">
-      <img src="/images/me.jpg" />
+      <img src="images/me.jpg" />
     </div>
   </div>
   <div>
@@ -67,7 +67,7 @@
   <div>
     <dl>
       <dt class="strong">Расскажите нам о вашем опыте разработки. Ничего не упускайте: это может быть как серьезный интерфейс, так и просто домашняя страничка.</dt>
-      <dd>Начал увлекаться веб разработкой и версткой где-то в 2001 году, когда учился. Активно же начал фрилансить изучать новые технологии только 3 года назад.</dd>
+      <dd>Начал увлекаться веб разработкой и версткой где-то в 2001 году, когда учился. Активно же начал фрилансить изучать новые технологии только 3 года назад. Подробнее можно посмотреть в <a href="https://www.free-lance.ru/users/gmotyara/">портфолио</a>.</dd>
     </dl>
     <dl>
       <dt class="strong">Какие языки программирования, фреймворки и технологии вы использовали? Сложились ли у вас личные предпочтения?</dt>
@@ -126,15 +126,15 @@
 </div>
 <div id="last-works" class="row">
   <div class="three columns">
-    <a href="http://polimerka-ekt.ru/colors/" class="thumbnail"><img src="/images/last-works/ppo.png" /></a>
+    <a href="http://polimerka-ekt.ru/colors/" class="thumbnail"><img src="images/last-works/ppo.png" /></a>
   </div>
   <div class="three columns">
-    <a href="http://kupi-admin.herokuapp.com/system-filters.html" class="thumbnail"><img src="/images/last-works/kupiru-admin.png" /></a>
+    <a href="http://kupi-admin.herokuapp.com/system-filters.html" class="thumbnail"><img src="images/last-works/kupiru-admin.png" /></a>
   </div>
   <div class="three columns">
-    <a href="http://aspektr.herokuapp.com/" class="thumbnail"><img src="/images/last-works/aspektrru.png" /></a>
+    <a href="http://aspektr.herokuapp.com/" class="thumbnail"><img src="images/last-works/aspektrru.png" /></a>
   </div>
   <div class="three columns">
-    <a href="http://aspektr.herokuapp.com/admin/lot-details.html" class="thumbnail"><img src="/images/last-works/aspektrru-admin.png" /></a>
+    <a href="http://aspektr.herokuapp.com/admin/lot-details.html" class="thumbnail"><img src="images/last-works/aspektrru-admin.png" /></a>
   </div>
 </div>
