--- a/html/stylesheets/foundation.css
+++ b/html/stylesheets/foundation.css
@@ -1,17 +1,62 @@
 /*
-Syntax error: File to import not found or unreadable: modular-scale.
-              Load paths:
-                c:/Users/suenot/Dropbox/work/suenot-for-shri/sass
-                c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/frameworks/blueprint/stylesheets
-                c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets
-                Compass::SpriteImporter
-        on line 8 of c:/Users/suenot/Dropbox/work/suenot-for-shri/sass/foundation.scss
+Syntax error: Undefined operation: "ms(0) times 1.25".
+        on line 10 of ./sass/foundation/common/_typography.scss
+        from line 3 of ./sass/foundation/common/_base.scss
+        from line 16 of ./sass/foundation.scss
+
+5: 
+6: @import "compass/css3";
+7: 
+8: // @import "modular-scale";
+9: 
+10: @import "foundation/functions/all";
+11: 
+12: @import "foundation/settings";
+13: 
+14: @import "foundation/mixins/all";
+15: 
 
 Backtrace:
-c:/Users/suenot/Dropbox/work/suenot-for-shri/sass/foundation.scss:8
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/import_node.rb:64:in `import'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/import_node.rb:25:in `imported_file'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:227:in `visit_import'
+./sass/foundation/common/_typography.scss:10
+./sass/foundation/common/_base.scss:3
+./sass/foundation.scss:16
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/script/operation.rb:93:in `_perform'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/script/node.rb:40:in `perform'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:294:in `visit_prop'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `map'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:107:in `visit_children'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:119:in `with_environment'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:106:in `visit_children'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:316:in `visit_rule'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `map'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:107:in `visit_children'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:119:in `with_environment'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:106:in `visit_children'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:316:in `visit_rule'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `map'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `map'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
@@ -31,29 +76,38 @@ c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perf
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/root_node.rb:20:in `render'
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/engine.rb:315:in `_render'
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/engine.rb:262:in `render'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:140:in `compile'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:139:in `compile'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/logger.rb:45:in `red'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:138:in `compile'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:118:in `compile_if_required'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:103:in `run'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `each'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `run'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:100:in `run'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/commands/update_project.rb:45:in `perform'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/commands/base.rb:18:in `execute'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/commands/project_base.rb:19:in `execute'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/bin/compass:30
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/bin/compass:44:in `call'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/bin/compass:44
-c:/Ruby187/bin/compass:23:in `load'
-c:/Ruby187/bin/compass:23
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:340:in `update_stylesheet'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:202:in `update_stylesheets'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:200:in `each'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:200:in `update_stylesheets'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/rack.rb:51:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/lint.rb:48:in `_call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/lint.rb:36:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/showexceptions.rb:24:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/commonlogger.rb:20:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/chunked.rb:43:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/content_length.rb:14:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/handler/webrick.rb:59:in `service'
+c:/Ruby187/lib/ruby/1.8/webrick/httpserver.rb:104:in `service'
+c:/Ruby187/lib/ruby/1.8/webrick/httpserver.rb:65:in `run'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:173:in `start_thread'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:162:in `start'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:162:in `start_thread'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:95:in `start'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:92:in `each'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:92:in `start'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:23:in `start'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:82:in `start'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/handler/webrick.rb:13:in `run'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/server.rb:265:in `start'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/server.rb:137:in `start'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/bin/rackup:4
+c:/Ruby187/bin/rackup:23:in `load'
+c:/Ruby187/bin/rackup:23
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Syntax error: File to import not found or unreadable: modular-scale.\A               Load paths:\A                 c:/Users/suenot/Dropbox/work/suenot-for-shri/sass\A                 c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/frameworks/blueprint/stylesheets\A                 c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets\A                 Compass::SpriteImporter\A         on line 8 of c:/Users/suenot/Dropbox/work/suenot-for-shri/sass/foundation.scss"; }
+  content: "Syntax error: Undefined operation: \"ms(0) times 1.25\".\A         on line 10 of ./sass/foundation/common/_typography.scss\A         from line 3 of ./sass/foundation/common/_base.scss\A         from line 16 of ./sass/foundation.scss\A \A 5: \A 6: @import \"compass/css3\";\A 7: \A 8: // @import \"modular-scale\";\A 9: \A 10: @import \"foundation/functions/all\";\A 11: \A 12: @import \"foundation/settings\";\A 13: \A 14: @import \"foundation/mixins/all\";\A 15: "; }
