--- a/html/stylesheets/foundation/functions/modular-scale.css
+++ b/html/stylesheets/foundation/functions/modular-scale.css
@@ -1,10 +1,10 @@
 /*
-Sass::SyntaxError: An @import loop has been found: c:/Users/suenot/Dropbox/work/suenot-for-shri/sass/foundation/functions/modular-scale.scss imports itself
+Sass::SyntaxError: An @import loop has been found: ./sass/foundation/functions/modular-scale.scss imports itself
 
 Backtrace:
-c:/Users/suenot/Dropbox/work/suenot-for-shri/sass/foundation/functions/modular-scale.scss:
-c:/Users/suenot/Dropbox/work/suenot-for-shri/sass/foundation/functions/modular-scale.scss:3
-c:/Users/suenot/Dropbox/work/suenot-for-shri/sass/foundation/functions/modular-scale.scss:3
+./sass/foundation/functions/modular-scale.scss:
+./sass/foundation/functions/modular-scale.scss:3
+./sass/foundation/functions/modular-scale.scss:3
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:435:in `handle_import_loop!'
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:219:in `visit_import'
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
@@ -32,29 +32,38 @@ c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perf
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/root_node.rb:20:in `render'
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/engine.rb:315:in `_render'
 c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/engine.rb:262:in `render'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:140:in `compile'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:139:in `compile'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/logger.rb:45:in `red'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:138:in `compile'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:118:in `compile_if_required'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:103:in `run'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `each'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `run'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/compiler.rb:100:in `run'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/commands/update_project.rb:45:in `perform'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/commands/base.rb:18:in `execute'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/commands/project_base.rb:19:in `execute'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/bin/compass:30
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/bin/compass:44:in `call'
-c:/Ruby187/lib/ruby/gems/1.8/gems/compass-0.12.2/bin/compass:44
-c:/Ruby187/bin/compass:23:in `load'
-c:/Ruby187/bin/compass:23
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:340:in `update_stylesheet'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:202:in `update_stylesheets'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:200:in `each'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:200:in `update_stylesheets'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
+c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/rack.rb:51:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/lint.rb:48:in `_call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/lint.rb:36:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/showexceptions.rb:24:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/commonlogger.rb:20:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/chunked.rb:43:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/content_length.rb:14:in `call'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/handler/webrick.rb:59:in `service'
+c:/Ruby187/lib/ruby/1.8/webrick/httpserver.rb:104:in `service'
+c:/Ruby187/lib/ruby/1.8/webrick/httpserver.rb:65:in `run'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:173:in `start_thread'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:162:in `start'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:162:in `start_thread'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:95:in `start'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:92:in `each'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:92:in `start'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:23:in `start'
+c:/Ruby187/lib/ruby/1.8/webrick/server.rb:82:in `start'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/handler/webrick.rb:13:in `run'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/server.rb:265:in `start'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/server.rb:137:in `start'
+c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/bin/rackup:4
+c:/Ruby187/bin/rackup:23:in `load'
+c:/Ruby187/bin/rackup:23
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Sass::SyntaxError: An @import loop has been found: c:/Users/suenot/Dropbox/work/suenot-for-shri/sass/foundation/functions/modular-scale.scss imports itself"; }
+  content: "Sass::SyntaxError: An @import loop has been found: ./sass/foundation/functions/modular-scale.scss imports itself"; }
