--- a/public/stylesheets/foundation/foundation/functions/modular-scale.css
+++ b/public/stylesheets/foundation/foundation/functions/modular-scale.css
@@ -1,69 +1,69 @@
 /*
-Sass::SyntaxError: An @import loop has been found: c:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss imports itself
+Sass::SyntaxError: An @import loop has been found: C:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss imports itself
 
 Backtrace:
-c:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss:
-c:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss:3
-c:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss:3
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:435:in `handle_import_loop!'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:219:in `visit_import'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `map'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `map'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:107:in `visit_children'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:119:in `with_environment'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:106:in `visit_children'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:126:in `visit_root'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:7:in `send'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:7:in `visit'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/root_node.rb:20:in `render'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/engine.rb:315:in `_render'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/engine.rb:262:in `render'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:340:in `update_stylesheet'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:202:in `update_stylesheets'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:200:in `each'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:200:in `update_stylesheets'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
-c:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/rack.rb:51:in `call'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/lint.rb:48:in `_call'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/lint.rb:36:in `call'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/showexceptions.rb:24:in `call'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/commonlogger.rb:20:in `call'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/chunked.rb:43:in `call'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/content_length.rb:14:in `call'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/handler/webrick.rb:59:in `service'
-c:/Ruby187/lib/ruby/1.8/webrick/httpserver.rb:104:in `service'
-c:/Ruby187/lib/ruby/1.8/webrick/httpserver.rb:65:in `run'
-c:/Ruby187/lib/ruby/1.8/webrick/server.rb:173:in `start_thread'
-c:/Ruby187/lib/ruby/1.8/webrick/server.rb:162:in `start'
-c:/Ruby187/lib/ruby/1.8/webrick/server.rb:162:in `start_thread'
-c:/Ruby187/lib/ruby/1.8/webrick/server.rb:95:in `start'
-c:/Ruby187/lib/ruby/1.8/webrick/server.rb:92:in `each'
-c:/Ruby187/lib/ruby/1.8/webrick/server.rb:92:in `start'
-c:/Ruby187/lib/ruby/1.8/webrick/server.rb:23:in `start'
-c:/Ruby187/lib/ruby/1.8/webrick/server.rb:82:in `start'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/handler/webrick.rb:13:in `run'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/server.rb:265:in `start'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/server.rb:137:in `start'
-c:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/bin/rackup:4
-c:/Ruby187/bin/rackup:23:in `load'
-c:/Ruby187/bin/rackup:23
+C:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss:
+C:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss:3
+C:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss:3
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:435:in `handle_import_loop!'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:219:in `visit_import'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `map'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:224:in `visit_import'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `map'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:107:in `visit_children'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:119:in `with_environment'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:106:in `visit_children'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:126:in `visit_root'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:98:in `visit'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:7:in `send'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/visitors/perform.rb:7:in `visit'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/tree/root_node.rb:20:in `render'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/engine.rb:315:in `_render'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/engine.rb:262:in `render'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:340:in `update_stylesheet'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:202:in `update_stylesheets'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:200:in `each'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/compiler.rb:200:in `update_stylesheets'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
+C:/Ruby187/lib/ruby/gems/1.8/gems/sass-3.2.1/lib/sass/../sass/plugin/rack.rb:51:in `call'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/lint.rb:48:in `_call'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/lint.rb:36:in `call'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/showexceptions.rb:24:in `call'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/commonlogger.rb:20:in `call'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/chunked.rb:43:in `call'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/content_length.rb:14:in `call'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/handler/webrick.rb:59:in `service'
+C:/Ruby187/lib/ruby/1.8/webrick/httpserver.rb:104:in `service'
+C:/Ruby187/lib/ruby/1.8/webrick/httpserver.rb:65:in `run'
+C:/Ruby187/lib/ruby/1.8/webrick/server.rb:173:in `start_thread'
+C:/Ruby187/lib/ruby/1.8/webrick/server.rb:162:in `start'
+C:/Ruby187/lib/ruby/1.8/webrick/server.rb:162:in `start_thread'
+C:/Ruby187/lib/ruby/1.8/webrick/server.rb:95:in `start'
+C:/Ruby187/lib/ruby/1.8/webrick/server.rb:92:in `each'
+C:/Ruby187/lib/ruby/1.8/webrick/server.rb:92:in `start'
+C:/Ruby187/lib/ruby/1.8/webrick/server.rb:23:in `start'
+C:/Ruby187/lib/ruby/1.8/webrick/server.rb:82:in `start'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/handler/webrick.rb:13:in `run'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/server.rb:265:in `start'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/lib/rack/server.rb:137:in `start'
+C:/Ruby187/lib/ruby/gems/1.8/gems/rack-1.4.1/bin/rackup:4
+C:/Ruby187/bin/rackup:19:in `load'
+C:/Ruby187/bin/rackup:19
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Sass::SyntaxError: An @import loop has been found: c:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss imports itself"; }
+  content: "Sass::SyntaxError: An @import loop has been found: C:/Ruby187/lib/ruby/gems/1.8/gems/zurb-foundation-3.0.9/lib/../scss/foundation/functions/modular-scale.scss imports itself"; }
